# CalculatriceGrahique

./: CMakeLists.txt  main.cpp  readme.md
Parser/: EquationSolver.cpp  EquationSolver.h  Numerics.cpp
